--- a/css/style.css
+++ b/css/style.css
@@ -2014,3 +2014,17 @@ a.maplink:active {
 a.maplink:visited {
   text-decoration: none;
 }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
